# Surgical-Robotics

PickAndPlaceProject/Assets/: controllerTry.cs  msgbrowser_settings.asset  thesis_surgical_robot.unity
PickAndPlaceProject/Assets/Resources/: ROSConnectionPrefab.prefab
PickAndPlaceProject/Assets/Scripts/: JointAnglePublisher.cs  RosServiceCallExample.cs  RosSubscriberRobot.cs
PickAndPlaceProject/Assets/URDF/Bonecutting/CSI-200_BoneCuttingToolFullAssy_V4_URDF/: package.xml
PickAndPlaceProject/Assets/URDF/Bonecutting/CSI-200_BoneCuttingToolFullAssy_V4_URDF/config/: joint_names_CSI-200_BoneCuttingToolFullAssy_V4_URDF.yaml
PickAndPlaceProject/Assets/URDF/Bonecutting/CSI-200_BoneCuttingToolFullAssy_V4_URDF/launch/: display.launch
PickAndPlaceProject/Assets/URDF/Bonecutting/CSI-200_BoneCuttingToolFullAssy_V4_URDF/meshes/: base_link.prefab  jaw_3.asset  link_1.prefab  link_2_0.asset  link_2_2.asset  link_4.prefab  link_4_2.asset  link_6_0.asset  link_8.prefab  link_8_1.asset  link_9.STL
PickAndPlaceProject/Assets/URDF/BonecuttingTesting/: CSI-200_BoneCuttingToolFullAssy_V4_URDF.urdf  bonecutting_link3.urdf
PickAndPlaceProject/Assets/URDF/BonecuttingTesting/CSI-200_BoneCuttingToolFullAssy_V4_URDF/meshes/: base_link_0.asset  jaw.STL  (+14 more)
PickAndPlaceProject/Assets/URDF/Combine/: CSI-200_BoneCuttingToolFullAssy_V4_URDF.urdf  physicsMat.physicsMaterial2D
PickAndPlaceProject/Assets/URDF/Combine/CSI-200_BoneCuttingToolFullAssy_V4_URDF/: CMakeLists.txt
PickAndPlaceProject/Assets/URDF/frankaResearch/: fr3.urdf
PickAndPlaceProject/ProjectSettings/: ProjectSettings.asset
(+23 files in other folders)
